--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,19 +6,13 @@ body {
 }
 
 .movie-card {
-  background-color: #fff;
-  border: 0;
-  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
-    0 2px 4px rgba(0, 0, 0, 0.24);
-  padding: 1rem;
-  cursor: pointer;
-  position: relative;
-  margin: 1rem auto;
+  text-align: center;
+  max-width: 600px;
+  margin: 2% auto;
 }
 
-.movie-director {
-  padding: 4px 0;
-  font-size: 0.8rem;
+.movie-title {
+  font-size: 30px;
 }
 
 .saved-list {
@@ -67,6 +61,11 @@ body {
 }
 
 .home-button {
+  width: 20%;
+}
+
+.btn {
+  margin: 0 2%;
   padding: 5px 10px;
   background-color: lightskyblue;
 }
@@ -74,4 +73,9 @@ body {
 .movie-warning {
   color: red;
   text-align: center;
+}
+
+.form {
+  max-width: 800px;
+  margin: auto;
 }
